#add_subdirectory(us_covid19)
#add_subdirectory(simple)
#add_subdirectory(npp_viirs)
#add_subdirectory(ipplus360)
#add_subdirectory(clickhouse)
#add_subdirectory(medical)
add_subdirectory(gdp-quarter-query)
add_subdirectory(gdp_prediction)
add_subdirectory(gdp_query)
add_subdirectory(radiance-query)
